# easydata

./: .gitignore  .readthedocs.yaml  CODE_OF_CONDUCT.md  LICENSE  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: deploy.yml  main.yml
docs/: Makefile  advanced.rst  architecture.rst  conf.py  config.rst  contributing.rst  faq.rst  getting_started.rst  index.rst  installation.rst  requests.rst  scrapy.rst
docs/extending/: data_processors.rst  index.rst  item_processors.rst  parsers.rst  queries.rst
docs/parsers/: bool.rst  choice.rst  clause.rst  data.rst  description.rst  dictionary.rst  drop.rst  email.rst  has.rst  index.rst  list.rst  math.rst  misc.rst  number.rst  price.rst  text.rst  time.rst  url.rst
docs/processors/: data.rst  index.rst  item.rst
docs/queries/: cor.rst  cwith.rst  index.rst  jmespath.rst  key.rst  pyquery.rst  regex.rst
docs/tutorials/: blocks.rst  html.rst  index.rst  json.rst  multi.rst  xml.rst
easydata/: __init__.py  block.py  blocks.py  data.py  exceptions.py  groups.py  loaders.py  managers.py  mixins.py  models.py  types.py  typing.py
easydata/config/: default.py  loader.py
easydata/default/: __init__.py  config.py
easydata/parsers/: __init__.py  base.py  bool.py  choice.py  clause.py  data.py  desc.py  dict.py  drop.py  email.py  has.py  list.py  math.py  misc.py  number.py  price.py  text.py  time.py  url.py
easydata/processors/: __init__.py  base.py  data.py  item.py
tests/: test_block.py  test_blocks.py  test_data.py  test_loaders.py  test_managers.py  test_models.py
(+88 files in other folders)
