[metadata]
name = easydata
description = Data transformation and manipulation library
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/sitegroove/easydata
author = Rok Grabnar
author_email = grabnarrok@gmail.com
license = BSD 3-Clause
license_file = LICENSE
license_files =
    LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
project_urls =
    Bug Reports = https://github.com/sitegroove/easydata/issues
    Source = https://github.com/sitegroove/easydata
    Documentation = https://easydata.readthedocs.io/en/latest/

[options]
packages = find:
include_package_data = true
python_requires = >= 3.6

[bdist_wheel]
universal = 1

[flake8]
max-line-length = 89
select = E,W,F,I,C
ignore =
    # Line break occurred before a binary operator, handled by Black
    W503,
    # Line break occurred after a binary operator, handled by Black
    W504,
    # Not PEP8 compliant
    E203,
exclude = .venv/*
application-import-names = easydata
max-complexity = 22

[coverage:run]
branch = True
source =
    easydata
    tests
